# mintengine

./: .gitignore  README.md  pyproject.toml  vllm_test.py
reports/gemma3/tex/: macros.tex  main.tex  references.bib
reports/gemma3/tex/sections/: architecture.tex  attention.tex  introduction.tex  layer.tex  mlp.tex  rmsnorm.tex  rope.tex
reports/quant/: input_distribution_matters.md  input_type_results.json  mxfp4_opt_finding.md  mxfp4_variants.json  mxfp4_variants_finding.md  mxfp4_vs_rtn.json  rtn4_baseline.md  sweep_results.json  tighten_results.json
src/inferlite/: inferlite.py
src/inferlite/models/: gemma3.py
src/inferlite_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mintengine/: mintengine.py  weight_loader.py
src/mintengine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mintengine/eval/: __init__.py  capture.py  metrics.py  rollouts.py
src/mintengine/experiments/: compare_input_types.py  compare_mxfp4.py  compare_mxfp4_variants.py  compare_rtn.py  sweep_rtn.py  tighten_finding.py
src/mintengine/models/: gemma3.py  gemma3_weights.py  helpers.py  weight_loader.py
src/mintengine/quant/: __init__.py  linear.py
src/mintengine/quant/methods/: __init__.py  awq.py  had_mxfp4.py  mxfp4.py  mxfp4_opt.py  rtn.py
tests/: test_eval_pipeline.py  test_had_mxfp4.py  test_mxfp4.py  test_mxfp4_opt.py  test_quant_fp.py
