[project]
name = "inferlite-engine"
version = "0.1.0"
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown", charset = "utf-8" }
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "huggingface-hub>=1.1.7",
    "ruff>=0.14.8",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
]
[tool.uv.sources]
inferlite = { path = "src/inferlite" }
[project.scripts]
inferlite = "inferlite.inferlite:main"
[tool.setuptools.packages.find]
where = ["src"]
